@@ -41,6 +41,13 @@ task dataCollect(type: JavaExec) {
     workingDir = rootDir
 }
 
+task runBacktest(type: JavaExec) {
+    main = 'com.github.shk0da.goldendragon.backtest.BacktestRunner'
+    classpath = sourceSets.test.runtimeClasspath
+    workingDir = rootDir
+    jvmArgs '--add-opens', 'java.base/java.time=ALL-UNNAMED'
+}
+
 task runStrategy(type: JavaExec) {
     main = 'com.github.shk0da.goldendragon.GoldenDragon'
     classpath = sourceSets.test.runtimeClasspath
